--- a/index.html
+++ b/index.html
@@ -3,19 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Panel - G4A</title>
+  <title>Redirect Admin Panel</title>
+  <!-- Redirect automat catre admin.html -->
+  <meta http-equiv="refresh" content="0; url=admin.html">
   <style>
-    body { font-family: Arial, sans-serif; background: #1b1f38; color: #fff; display: flex; justify-content: center; align-items: center; height: 100vh; }
+    body { 
+      font-family: Arial, sans-serif; 
+      background: #1b1f38; 
+      color: #fff; 
+      display: flex; 
+      justify-content: center; 
+      align-items: center; 
+      height: 100vh; 
+      margin: 0;
+    }
     .container { text-align: center; }
-    a { color: #ff6600; text-decoration: none; font-weight: bold; }
+    a { color: #ff6600; text-decoration: none; }
     a:hover { color: #fff; }
+    /* Link ascuns */
+    #site-original { display: none; }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Admin Panel G4A</h1>
-    <p>Bine ai venit în panoul de administrare!</p>
-    <p><a href="https://github.com/utilizator/repo-original" target="_blank">Înapoi la site-ul principal</a></p>
+    <h1>Redirecționare către Admin Panel...</h1>
+    <p>Dacă nu ești redirecționat automat, <a href="admin.html">click aici</a>.</p>
+
+    <!-- Link ascuns catre site-ul principal -->
+    <a id="site-original" href="https://site-original.com" target="_blank">Site Principal</a>
   </div>
+
+  <script>
+    // Optional: poti face link-ul vizibil doar cu o combinatie de taste
+    document.addEventListener('keydown', function(e){
+      // CTRL + SHIFT + A
+      if(e.ctrlKey && e.shiftKey && e.key.toLowerCase() === 'a'){
+        const link = document.getElementById('site-original');
+        link.style.display = 'inline';
+        alert('Link-ul către site-ul principal a fost dezvăluit!');
+      }
+    });
+  </script>
 </body>
 </html>
