--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Redirect Admin Panel</title>
+  <meta http-equiv="refresh" content="0; url=admin.html">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container">
+    <h1>Redirecționare către Admin Panel...</h1>
+    <p>Dacă nu ești redirecționat automat, <a href="admin.html">click aici</a>.</p>
+  </div>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="ro">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Redirect Admin Panel</title>
   <!-- Redirect automat catre admin.html -->
   <meta http-equiv="refresh" content="0; url=admin.html">
   <style>
@@ -46,3 +62,4 @@
   </script>
 </body>
 </html>
+
